tests/fail/expr/assign.rs
fn main() {
    let mut x = true;
    one_assert::assert!(x = false);
}
